main plus layout header

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,7 +5,13 @@
 }
 
 @mixin onTablet {
-  @media (min-width: 640px) {
+  @media (min-width: 640px) and (max-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin onPhone {
+  @media (max-width: 640px) {
     @content;
   }
 }
