--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
   box-sizing: border-box;
-  box-shadow: 0px 1px 1px #E2E6E9;
+  box-shadow: 0px 1px 1px #e2e6e9;
   margin-bottom: 1px;
   height: 64px;
 
@@ -26,14 +26,14 @@
 
   &__container-left-side {
     display: flex;
-    box-shadow: 0px 1px 1px #E2E6E9;
+    box-shadow: 0px 1px 1px #e2e6e9;
     margin-left: auto;
   }
 
   &__left-side-icons {
     padding: 0 24px;
     justify-content: center;
-    box-shadow: -1px 0px 0px #E2E6E9;
+    box-shadow: -1px 0px 0px #e2e6e9;
     background-color: #fff;
     border: 0;
   }
@@ -67,7 +67,7 @@
     text-decoration: none;
     text-transform: uppercase;
 
-    color: #89939A;
+    color: #89939a;
   }
 }
 
@@ -77,7 +77,7 @@
 }
 
 .is-active::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 34px;
@@ -120,7 +120,6 @@
   .is-active::after {
     top: 26px;
   }
-  
 }
 
 @include onPhone() {
