--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,10 +1,10 @@
-$white: #FFFFFF;
-$hover-and-bg: #FAFBFC;
-$elements: #E2E6E9;
-$icons: #B4BDC3;
-$secondary: #89939A;
-$primary: #0F0F11;
-$secondary-accent: #F4BA47;
-$accent: #4219D0;
-$green: #27AE60;
-$red: #EB5757;
+$white: #ffffff;
+$hover-and-bg: #fafbfc;
+$elements: #e2e6e9;
+$icons: #b4bdc3;
+$secondary: #89939a;
+$primary: #0f0f11;
+$secondary-accent: #f4ba47;
+$accent: #4219d0;
+$green: #27ae60;
+$red: #eb5757;
