--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -93,10 +93,10 @@
     color: $secondary;
     margin-right: 16px;
   }
-  
+
   &__button {
     padding: 16px;
-    background-image: url("../../images/icons/button-back.svg");
+    background-image: url('../../images/icons/button-back.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 32px;
