--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -1,8 +1,8 @@
 .card {
   box-sizing: border-box;
   padding: 32px;
-  width: 272px;
-  height: 506px;
+  min-width: 212px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -12,15 +12,17 @@
   border-radius: 8px;
 
   &__image {
-    margin: 0 0 24px;
-    height: 208px;
-    width: 196px;
+    width: 100%;
+    height: 100%;
+
+    max-width: 200px;
+    max-height: 200px;
+
     object-fit: contain;
+    margin: 32px auto 24px;
   }
 
   &__title {
-    font-family: 'Mont';
-    font-style: normal;
     font-weight: 600;
     font-size: 14px;
     line-height: 21px;
@@ -32,7 +34,7 @@
 
   &__price {
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     display: flex;
     align-items: center;
     gap: 8px;
@@ -41,9 +43,6 @@
   &__sell-price {
     display: flex;
     justify-content: space-around;
-
-    font-family: 'Mont';
-    font-style: normal;
     font-weight: 800;
     font-size: 22px;
     line-height: 140%;
@@ -52,8 +51,6 @@
   }
 
   &__full-price {
-    font-family: 'Mont';
-    font-style: normal;
     font-weight: 500;
     font-size: 22px;
     line-height: 28px;
@@ -61,21 +58,20 @@
     text-decoration: line-through;
   }
 
-  &__features {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-
-  &__features::before {
-    content: '';
-    height: 1px;
+  &__line {
+    height: 0px;
     width: 100%;
-    background-color: #e2e6e9;
+    border: 1px solid #e2e6e9;
     margin-bottom: 16px;
   }
 
+  &__features {
+    display: flex;
+    flex-direction: column;
+  }
+
   &__feature {
+    margin-top: 0;
     margin-bottom: 8px;
     display: flex;
     justify-content: space-between;
@@ -106,10 +102,39 @@
     color: #0f0f11;
   }
 
-  &__buy {
+  &__buttons {
     display: flex;
     justify-content: space-between;
-    gap: 8px;
     justify-self: bottom;
+  }
+
+  &__button-add {
+    width: 100%;
+    height: 40px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    color: #fff;
+    background: #4219d0;
+    border-radius: 48px;
+  }
+
+  &__button-like {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 40px;
+    height: 40px;
+    background-color: #fff;
+
+    border: none;
+    padding: 0;
+    margin-left: 8px;
+    cursor: pointer;
+    outline: inherit;
+    border: 1px solid #b4bdc4;
+    transition: border 0.3s;
+    border-radius: 48px;
   }
 }
