--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -118,6 +118,12 @@
     background: #4219d0;
     border-radius: 48px;
     border: 1px solid #4219d0;
+    cursor: pointer;
+
+    &:hover {
+      background: #fff;
+      color: #4219d0;
+    }
   }
 
   &__button-like {
