--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,9 @@
 @import '../../styles/utils/mixins';
 
 .header {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -26,7 +29,6 @@
 
   &__container-left-side {
     display: flex;
-    box-shadow: 0px 1px 1px #e2e6e9;
     margin-left: auto;
   }
 
