--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,11 +33,13 @@
   }
 
   &__left-side-icons {
+    position: relative;
     padding: 0 24px;
     justify-content: center;
     box-shadow: -1px 0px 0px #e2e6e9;
     background-color: #fff;
     border: 0;
+    cursor: pointer;
   }
 
   &__icon {
@@ -50,6 +52,7 @@
   &__list {
     display: flex;
     padding: 0;
+    margin: 0;
   }
 
   &__item {
@@ -65,7 +68,7 @@
     font-style: normal;
     font-weight: 800;
     font-size: 12px;
-    line-height: 11px;
+    line-height: 46px;
     text-decoration: none;
     text-transform: uppercase;
 
@@ -75,14 +78,12 @@
 
 .is-active {
   color: #000;
-  position: relative;
 }
 
 .is-active::after {
   content: '';
-  display: block;
-  position: absolute;
-  top: 34px;
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
   height: 2px;
   background-color: #000;
