--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -14,6 +14,16 @@
   }
 
   &__item {
+    @for $start from 1 through 4 {
+      @for $end from $start through 4 {
+        &--mobile-#{$start}-#{$end} {
+          @include onPhone() {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+      }
+    }
+    
     @for $start from 1 through 12 {
       @for $end from $start through 12 {
         &--tablet-#{$start}-#{$end} {
