--- a/src/components/Dropdowns/Dropdowns.scss
+++ b/src/components/Dropdowns/Dropdowns.scss
@@ -1,4 +1,4 @@
-@import "../../styles/utils/_vars";
+@import '../../styles/utils/_vars';
 
 .dropdown {
   &__title {
@@ -17,9 +17,9 @@
   &__field {
     width: 100%;
     height: 40px;
-    
+
     padding: 0 12px;
-    
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,11 +34,11 @@
 
     border: 1px solid $icons;
     border-radius: 8px;
-    
+
     cursor: pointer;
-    
+
     background-color: white;
-    
+
     transition: border-color 0.3s color 0.3s;
 
     &--name {
@@ -56,12 +56,12 @@
     &--option {
       width: 100%;
       height: 32px;
-  
+
       border-radius: 0;
       border: transparent;
-  
+
       transition: color 0.3s;
-  
+
       &:hover {
         color: $secondary;
       }
@@ -88,7 +88,7 @@
 
     border: 1px solid $elements;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.05);
-    border-radius: 8px; 
+    border-radius: 8px;
 
     &--hidden {
       visibility: hidden;
