--- a/src/components/Phones/Phones.scss
+++ b/src/components/Phones/Phones.scss
@@ -1,5 +1,5 @@
 @import '../../styles/utils/mixins';
-@import "../../styles/utils/_vars";
+@import '../../styles/utils/_vars';
 
 .phones {
   margin: 24px 16px 0;
