--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/vars';
+
 .burger-menu {
   position: relative;
 
@@ -5,7 +7,7 @@
     overflow-y: scroll;
     position: fixed;
     top: 49px;
-    background-color: #fff;
+    background-color: $white;
     left: 0;
     bottom: 0;
     height: calc(100vh - 49px);
@@ -23,7 +25,7 @@
 
   &__nav {
     margin-top: 24px;
-    background-color: #fff;
+    background-color: $white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,17 +43,16 @@
   }
 
   &__link {
-    color: #89939a;
+    color: $secondary;
     text-transform: uppercase;
     font-size: 12px;
     line-height: 11px;
     font-weight: 800;
     letter-spacing: 0.04em;
     text-decoration: none;
-    color: #89939a;
 
     &.active {
-      color: #0f0f11;
+      color: $primary;
       position: relative;
 
       &::after {
@@ -61,13 +62,13 @@
         top: 25px;
         height: 3px;
         width: 100%;
-        background-color: #0f0f11;
+        background-color: $primary;
       }
     }
   }
 
   &__buttons {
-    background-color: #fff;
+    background-color: $white;
     width: 100%;
     display: flex;
     align-items: center;
@@ -82,10 +83,32 @@
   }
 
   &__button {
+    position: relative;
     width: 100%;
     padding: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  &__button-counter {
+    position: absolute;
+    left: 50%;
+    right: 20%;
+    top: 24%;
+    bottom: 50%;
+    width: 14px;
+    height: 14px;
+    font-weight: 600;
+    font-size: 9px;
+    line-height: 12px;
+    color: $white;
+    background-color: $accent;
+    border: 2px solid $white;
+    border-radius: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
