--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/vars';
+
 .card {
   box-sizing: border-box;
   padding: 32px;
@@ -5,8 +7,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #fff;
-  border: 1px solid #e2e6e9;
+  background-color: $white;
+  border: 1px solid $elements;
   box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 
@@ -25,10 +27,11 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 21px;
+    height: 65px;
 
     margin-top: 0;
     margin-bottom: 8px;
-    color: #0f0f11;
+    color: $primary;
   }
 
   &__price {
@@ -46,21 +49,21 @@
     font-size: 22px;
     line-height: 140%;
 
-    color: #0f0f11;
+    color: $primary;
   }
 
   &__full-price {
     font-weight: 500;
     font-size: 22px;
     line-height: 28px;
-    color: #89939a;
+    color: $secondary;
     text-decoration: line-through;
   }
 
   &__line {
     height: 0px;
     width: 100%;
-    border: 1px solid #e2e6e9;
+    border: 1px solid $elements;
     margin-bottom: 16px;
   }
 
@@ -87,7 +90,7 @@
     font-weight: 600;
     font-size: 12px;
     line-height: 15px;
-    color: #89939a;
+    color: $secondary;
   }
 
   &__feature-name--value {
@@ -98,7 +101,7 @@
     line-height: 15px;
     text-align: right;
 
-    color: #0f0f11;
+    color: $primary;
   }
 
   &__buttons {
@@ -114,15 +117,32 @@
     font-size: 14px;
     line-height: 21px;
     text-align: center;
-    color: #fff;
-    background: #4219d0;
+    color: $white;
+    background: $accent;
     border-radius: 48px;
-    border: 1px solid #4219d0;
+    border: 1px solid $accent;
     cursor: pointer;
 
     &:hover {
-      background: #fff;
-      color: #4219d0;
+      box-shadow: 0px 3px 13px rgba(23, 32, 49, 0.4);
+    }
+  }
+
+  &__button-added {
+    width: 100%;
+    height: 40px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    color: $accent;
+    background: #fff;
+    border-radius: 48px;
+    border: 1px solid $accent;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0px 3px 13px rgba(23, 32, 49, 0.4);
     }
   }
 
@@ -132,14 +152,14 @@
     justify-content: center;
     min-width: 40px;
     height: 40px;
-    background-color: #fff;
+    background-color: $white;
 
     border: none;
     padding: 0;
     margin-left: 8px;
     cursor: pointer;
     outline: inherit;
-    border: 1px solid #b4bdc4;
+    border: 1px solid $icons;
     transition: border 0.3s;
     border-radius: 48px;
   }
