--- a/src/components/CartPage/CartPage.scss
+++ b/src/components/CartPage/CartPage.scss
@@ -1,4 +1,5 @@
 @import '../../styles/utils/vars';
+@import '../../styles/utils/mixins.scss';
 
 .cart-page {
   margin-top: 24px;
@@ -44,6 +45,10 @@
     margin-bottom: 32px;
   }
 
+  &__container {
+    display: contents;
+  }
+
   &__product-list {
     margin-bottom: 32px;
   }
@@ -58,6 +63,7 @@
     align-items: center;
     padding: 24px;
     gap: 16px;
+    width: 100%;
   }
 
   &__total-price {
@@ -102,5 +108,24 @@
     font-size: 14px;
     line-height: 21px;
     text-align: center;
+  }
+}
+
+@include onDesktop() {
+  .cart-page {
+    margin-top: 40px;
+    margin-left: 32px;
+    margin-right: 32px;
+
+    &__container {
+      display: flex;
+      width: 100%;
+      gap: 16px;
+      justify-content: space-between;
+    }
+
+    &__product-list {
+      min-width: 752px;
+    }
   }
 }
