--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,14 +1,15 @@
 @import '../../styles/utils/mixins';
+@import '../../styles/utils/vars';
 
 .header {
   position: sticky;
   top: 0;
-  background-color: #fff;
+  background-color: $white;
   display: flex;
   flex-direction: row;
   align-items: center;
   box-sizing: border-box;
-  box-shadow: 0px 1px 1px #e2e6e9;
+  box-shadow: 0px 1px 1px $elements;
   margin-bottom: 1px;
   height: 64px;
 
@@ -33,19 +34,46 @@
   }
 
   &__left-side-icons {
-    position: relative;
     padding: 0 24px;
     justify-content: center;
-    box-shadow: -1px 0px 0px #e2e6e9;
+    box-shadow: -1px 0px 0px $elements;
     background-color: #fff;
     border: 0;
     cursor: pointer;
   }
 
   &__icon {
+    position: relative;
     width: 16px;
     height: 16px;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.3);
+    }
   }
+
+  &__button-counter {
+    position: absolute;
+    left: 50%;
+    right: 20%;
+    bottom: 45%;
+    width: 14px;
+    height: 14px;
+    font-weight: 600;
+    font-size: 9px;
+    line-height: 12px;
+    color: $white;
+    background-color: $accent;
+    border: 2px solid $white;
+    border-radius: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  
 }
 
 .nav {
@@ -72,12 +100,12 @@
     text-decoration: none;
     text-transform: uppercase;
 
-    color: #89939a;
+    color: $secondary;
   }
 }
 
 .is-active {
-  color: #000;
+  color: $primary;
 }
 
 .is-active::after {
@@ -86,7 +114,7 @@
   justify-content: flex-end;
   width: 100%;
   height: 2px;
-  background-color: #000;
+  background-color: $primary;
 }
 
 @include onTablet() {
