--- a/src/components/SingleItemPage/SingleItemPage.scss
+++ b/src/components/SingleItemPage/SingleItemPage.scss
@@ -28,7 +28,7 @@
     margin-bottom: 8px;
 
     .spec-title {
-      color: #89939A;
+      color: #89939a;
       font-family: 'Mont';
       font-style: normal;
       font-weight: 600;
