--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,20 +1,36 @@
-@import '../../styles/utils/mixins';
+@import '../../styles/utils/_mixins';
+@import '../../styles/utils/vars';
 
 .home {
-  margin: 24px 16px;
-  font-family: 'Mont';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 48px;
-  line-height: 56px;
-  letter-spacing: -0.01em;
-  color: #0f0f11;
+  margin: 24px 16px 0;
 
   @include onTablet() {
-    margin: 24px 32px;
+    padding: 25px 24px 0;
   }
 
   @include onDesktop() {
-    margin: 56px 32px;
+    width: 1140px;
+
+    margin: 0 auto;
+    padding: 25px 32px 0;
+  }
+
+  &__title {
+    margin-bottom: 32px;
+
+    font-family: 'Mont';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 41px;
+
+    letter-spacing: -0.01em;
+
+    color: $primary;
+
+    @include onTablet {
+      font-size: 48px;
+      line-height: 56px;
+    }
   }
 }
