--- a/src/components/CartProductItem/CartProductItem.scss
+++ b/src/components/CartProductItem/CartProductItem.scss
@@ -6,17 +6,25 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: space-between;
+
   padding: 16px;
   background-color: $white;
   border: 1px solid $elements;
   border-radius: 16px;
   gap: 16px;
+  
+  position: relative;
+
+  width: 100%;
 
   &__info {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0px;
+    justify-content: space-between;
+
+    padding: 0;
     gap: 16px;
     width: 100%;
   }
@@ -94,6 +102,7 @@
 
   &__price {
     display: flex;
+
     margin-left: auto;
     font-weight: 800;
     font-size: 22px;
@@ -104,7 +113,7 @@
 @include onTablet() {
   .product-item {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 24px;
     gap: 24px;
