--- a/src/components/CartProductItem/CartProductItem.scss
+++ b/src/components/CartProductItem/CartProductItem.scss
@@ -4,6 +4,7 @@
 .product-item {
   box-sizing: border-box;
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: flex-start;
   padding: 16px;
@@ -93,8 +94,7 @@
   }
 
   &__price {
-    display: flex;
-    margin-left: auto;
+    display: inline;
     font-weight: 800;
     font-size: 22px;
     line-height: 140%;
@@ -114,11 +114,13 @@
     }
 
     &__bottom-container {
-      display: contents;
+      justify-content: space-around;
     }
 
     &__price {
+      display: inline;
       margin-left: 0;
+      width: 80px;
     }
   }
 }
