--- a/src/components/ProductOptions/ProductOptions.scss
+++ b/src/components/ProductOptions/ProductOptions.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/vars';
+
 // $font-family: Mont;
 // $font-size: 12px;
 // $font-weight-semi-bold: 600;
@@ -236,6 +238,7 @@ $colors: (
     &:hover {
       border-color: #a8a8a8;
     }
+
     &-active {
       border-color: #0f0f11;
     }
@@ -253,7 +256,8 @@ $colors: (
         border-color: #a8a8a8;
       }
 
-      @each $color, $value in $colors {
+      @each $color,
+      $value in $colors {
         &.colors-block__picker-#{$color} {
           background-color: $value;
         }
@@ -307,6 +311,68 @@ $colors: (
     &:before {
       content: '$';
     }
+  }
+}
+
+.buttons {
+  margin-top: 16px;
+  margin-bottom: 32px;
+  display: flex;
+  justify-content: space-between;
+  justify-self: bottom;
+
+  &__button-add {
+    width: 100%;
+    height: 40px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    color: $white;
+    background: $accent;
+    border-radius: 48px;
+    border: 1px solid $accent;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0px 3px 13px rgba(23, 32, 49, 0.4);
+    }
+  }
+
+  &__button-added {
+    width: 100%;
+    height: 40px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    color: $accent;
+    background: #fff;
+    border-radius: 48px;
+    border: 1px solid $accent;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0px 3px 13px rgba(23, 32, 49, 0.4);
+    }
+  }
+
+  &__button-like {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 40px;
+    height: 40px;
+    background-color: $white;
+
+    border: none;
+    padding: 0;
+    margin-left: 8px;
+    cursor: pointer;
+    outline: inherit;
+    border: 1px solid $icons;
+    transition: border 0.3s;
+    border-radius: 48px;
   }
 }
 
