--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,3 +8,20 @@ $secondary-accent: #f4ba47;
 $accent: #4219d0;
 $green: #27ae60;
 $red: #eb5757;
+
+$iphone-colors: (
+  'yellow': #ffe680,
+  'green': #ade1cd,
+  'red': #ba0c2f,
+  'gold': #fbd7bd,
+  'spacegray': #52514f,
+  'black': #000000,
+  'rosegold': #f9b2a2,
+  'silver': #ebebe3,
+  'gray': #c0c0c0,
+  'purple': #d1cddb,
+  'white': #f9f6ef,
+  'coral': #ee7762,
+  'midnightgreen': #4e5850,
+);
+
